# mango

./: .gitignore  Cargo.toml  README.md
mango/: Cargo.toml
mango/src/: bootstrap.rs  detected_version.rs  file_util.rs  main.rs  minecraft_server.rs  registry_layer.rs  shared_constants.rs  world_loader.rs
mango/src/codec/: README.md  mod.rs
mango/src/commands/: commands.rs
mango/src/core/: block_pos.rs  direction.rs  layered_registry_access.rs  mapped_registry.rs  mod.rs  registration_info.rs  registry.rs  registry_access.rs  vec3i.rs
mango/src/core/registries/: built_in_registries.rs  mod.rs  registries.rs
mango/src/dedicated/: dedicated_server_properties.rs  dedicated_server_settings.rs  mod.rs
mango/src/nbt/: compound_tag.rs  end_tag.rs  list_tag.rs  mod.rs  nbt_accounter.rs  nbt_io.rs  nbt_ops.rs  nbt_utils.rs  string_tag.rs  tag.rs  tag_type.rs
mango/src/network/chat/: component_contents.rs  mod.rs  mutable_component.rs  style.rs
mango/src/network/chat/contents/: mod.rs  plain_text_contents.rs  translatable_contents.rs
mango/src/packs/: abstract_pack_resources.rs  built_in_metadata.rs  file_pack_resources.rs  inline_pack_resources.rs  mod.rs  pack_location_info.rs  pack_resources.rs  pack_selection_config.rs  pack_type.rs  vanilla_pack_resources.rs
mango/src/packs/metadata/: metadata_section_type.rs  mod.rs
mango/src/packs/metadata/pack/: feature_flags_metadata_section.rs  mod.rs  pack_metadata_section.rs
mango/src/packs/repository/: folder_repository_source.rs  known_pack.rs  mod.rs  pack.rs  pack_compatibility.rs  pack_detector.rs  pack_repository.rs  pack_source.rs  repository_source.rs  server_packs_source.rs
mango/src/packs/resources/: fallback_resource_manager.rs  mod.rs  multi_pack_resource_manager.rs  resource_filter_section.rs  resource_manager.rs
mango/src/resources/: mod.rs  resource_key.rs  resource_location.rs
mango/src/sounds/: mod.rs  sound_event.rs  sound_events.rs
mango/src/util/: directory_lock.rs  mod.rs  mth.rs  resource_location_pattern.rs
mango/src/util/datafix/: README.md  data_fix.rs  data_fix_types.rs  data_fixers.rs  mod.rs  schema.rs
mango/src/util/datafix/serialization/: dynamic.rs  dynamic_ops.rs  mod.rs
mango/src/world/: difficulty.rs  mod.rs
mango/src/world/entity/: entity.rs  entity_attachment.rs  entity_attachments.rs  entity_dimensions.rs  entity_type.rs  mob_category.rs  mod.rs
mango/src/world/entity/animal/: mod.rs  ocelot.rs  parrot.rs
mango/src/world/entity/player/: player.rs
mango/src/world/flag/: feature_flag.rs  feature_flag_registry.rs  feature_flag_set.rs  feature_flags.rs  mod.rs
mango/src/world/item/: block_item.rs  item.rs  items.rs  mod.rs
mango/src/world/level/: block_getter.rs  data_pack_config.rs  game_rules.rs  game_type.rs  level.rs  level_settings.rs  mod.rs  world_data_configuration.rs
mango/src/world/level/block/: bamboo_sapling_block.rs  block.rs  blocks.rs  composter_block.rs  fire_block.rs  leaves_block.rs  mod.rs  sound_type.rs  support_type.rs  web_block.rs
mango/src/world/phys/: mod.rs  vec3.rs
(+21 files in other folders)
