[workspace]
members = [
    "mango"
]
default-members = ["mango"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bon = "3"
dashmap = { version = "6", features = ["serde"] }
encoding_rs = "0.8"
jiff = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["json"] }
serde-java-properties = "0.2"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
typetag = "0.2"