[package]
name = "mango"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
cesu8 = { workspace = true }
dashmap = { workspace = true }
encoding_rs = { workspace = true }
fs4 = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde-java-properties = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typetag = { workspace = true }
walkdir = { workspace = true }
